--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,25 @@
-<hello name="{{ name }}"></hello>
+<nav class="navbar navbar-expand navbar-custom">
+    <div class="navbar-nav">
+        <h3 style="color: white"> myVent </h3>
+        <!-- <a class="nav-item nav-link">Home</a>
+        <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Events</a> -->
+    </div>
+</nav>
+
+<!-- main app container -->
+<div class="app-container bg-light">
+    <hello name="{{ name }}"></hello>
 <p>
   Start editing to see some magic happen :)
 </p>
 <portfolio></portfolio>
 <event></event>
+</div>
+
+<!-- credits -->
+<div class="text-center mt-4">
+    <p style="color: blue">
+       myVent
+    </p>
+</div>
+
