6 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,12 @@
 
 <!-- main app container -->
 <div class="app-container bg-light">
-    <hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<home></home>
 <portfolio></portfolio>
-<event></event>
-</div>
 
+<event></event> 
+
+</div>
 <!-- credits -->
 <div class="text-center mt-4">
     <p style="color: blue">
