--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
 
 <!-- main app container -->
 <div class="app-container bg-light">
+<!--<router-outlet></router-outlet>-->
 <home></home>
-<portfolio></portfolio>
 
 <event></event> 
 
